jump blocker: fixed column sizes

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -22,6 +22,13 @@ table {
 	border: 1px solid #f94;
 }
 
+td {
+	max-width: 0;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
 caption {
 	display: none;
 }
